@@ -10,6 +10,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   argument following the one containing the moved sub-tree.
   [bug introduced in coreutils-5.1.0]
 
+  rm -f no longer fails for EINVAL or EILSEQ on file systems that
+  reject file names invalid for that file system.
+
 
 * Noteworthy changes in release 8.9 (2011-01-04) [stable]
 
